# Plate_detection_recognition

./: .gitignore  CMakeLists.txt  README.md
config/: plate_whitelist.txt
docs/: mqtt_remote_report.md
include/: bytetrack.hpp  camera_source_thread.hpp  decoder_thread.hpp  encoder_writer_thread.hpp  inference_thread.hpp  license_plate_ocr.hpp  oled_display_thread.hpp  pipeline_types.hpp  plate_ocr_stage.hpp  plate_relay.hpp  postprocess_osd_thread.hpp  preprocess_thread.hpp  rknn_input_runtime.hpp  upload_event.hpp
models/car-v8/: v8-car-relu-3588.rknn
ppocrv5/PP-OCRv5_mobile_rec_license_plate_onnx/: inference.yml
ppocrv5/cpp/: CMakeLists.txt  main.cc  ppocrv5.h  rec_license_plate_demo.cc
ppocrv5/cpp/install/rk3588_linux/: rknn_license_plate_rec_demo  rknn_ppocrv_demo
ppocrv5/cpp/rknpu2/: ppocrv5.cc
ppocrv5/model/: license_plate_dict.txt
ppocrv5/python/: convert_det.py  convert_rec.py  test_rec_rknn.py
rs485/Modbus继电器模块资料包/: MODBUS-RTU通讯协议汇总.xlsx  ~$MODBUS-RTU通讯协议汇总.xlsx
rs485/Modbus继电器模块资料包/Modbus继电器上位机20250508/: RlyCmdApp.deps.json
rs485/Modbus继电器模块资料包/modebus继电器模块串口指令sscom拓展/: sscom51.ini
src/: bytetrack.cpp  camera_source_thread.cpp  decoder_thread.cpp  encoder_writer_thread.cpp  inference_thread.cpp  license_plate_ocr.cpp  main.cpp  oled_display_thread.cpp  plate_ocr_stage.cpp  plate_relay.cpp  postprocess_osd_thread.cpp  preprocess_thread.cpp  rknn_input_runtime.cpp  upload_event.cpp
